added callback modal to callback button in header.

--- a/prepros.config
+++ b/prepros.config
@@ -908,6 +908,17 @@
             }
           }
         }
+      },
+      {
+        "file": "styles/plugin_callbackModal.scss",
+        "config": {
+          "customOutput": "styles/plugin_callbackModal.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
       }
     ]
   }
